# lokigi

./: .all-contributorsrc  .gitignore  .nojekyll  CONTRIBUTING.md  Dockerfile  HISTORY.md  LICENSE.md  README.md  THIRD_PARTY_LICENCES.md  _quarto.yml  _sidebar.yml  listings.json  objects.json  pyproject.toml  pytest.ini  robots.txt  search.json  sitemap.xml
dev_environment/: environment.yml  requirements.txt
examples/: examples.html  examples.qmd
lokigi/: __init__.py  plot_utils.py  site.py  site_solutions.py  utils.py
lokigi_docs/: changelog.html  changelog.qmd  getting_started.html  getting_started.qmd  getting_started.quarto_ipynb_1  index.html  index.qmd  lokigi_class_diagram.drawio  lokigi_image_showcase.drawio  lokigi_input_data_examples.drawio  structure.html  structure.qmd
reference/: index.html  lokigi.mixins.site_solvers.BruteForceMixin._brute_force.html  lokigi.mixins.site_solvers.GraspMixin._grasp.html  lokigi.mixins.site_solvers.GreedyMixin._greedy.html  lokigi.site.SiteProblem.add_demand.html  lokigi.site.SiteProblem.add_equity_data.html  lokigi.site.SiteProblem.add_region_geometry_layer.html  lokigi.site.SiteProblem.add_sites.html  lokigi.site.SiteProblem.add_travel_matrix.html  lokigi.site.SiteProblem.describe_models.html  lokigi.site.SiteProblem.evaluate_single_solution_single_objective.html  lokigi.site.SiteProblem.plot_region_geometry_layer.html  lokigi.site.SiteProblem.plot_sites.html  lokigi.site.SiteProblem.show_demand.html  lokigi.site.SiteProblem.show_demand_format.html  lokigi.site.SiteProblem.show_region_geometry_layer.html  lokigi.site.SiteProblem.show_sites.html  lokigi.site.SiteProblem.show_travel_format.html  lokigi.site.SiteProblem.show_travel_matrix.html  lokigi.site.SiteProblem.solve.html  (+17 more)
(+78 files in other folders)
