[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lokigi"
version = "0.1.0"
description = "A package for generating, ranking, analysing and visualising the best candidate solutions for discrete facility location problems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sammi Rosser", email = "s.j.rosser@exeter.ac.uk" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.26.2,<3.0.0",
    "pandas>=2.0.1,<4.0.0",
    "geopandas>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "webcolors>=24.11.1",
    "folium>=0.14.0",
    "contextily>=1.5.0,<2.0.0",
    "mapclassify>=2.0.0,<3.0.0",
    "adjusttext>=1.3.0",
    "tqdm>=4.67.3",
    "sweetpareto>=1.1.0",
    "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/hsma-tools/lokigi"
Documentation = "http://hsma-tools.github.io/lokigi/lokigi_docs/"
"Bug Tracker" = "https://github.com/hsma-tools/lokigi/issues"

[tool.hatch.version]
path = "lokigi/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/lokigi",
]

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "black",
    "flake8",
    "hatch",
    "ipywidgets==8.1.5",
    "jupyterlab==4.2.4",
    "jupyterlab-spellchecker==0.8.4",
    "lintquarto==0.8.0",
    "nbqa",
    "pylint==4.0.5",
    "pytest-html==4.1.1",
    "quartodoc==0.11.1",
    "tox==4.25.0",
    "griffe<2.0.0",
    "plotly>=6.6.0",
]
